# bevy

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: ci.yml
crates/bevy_asset/: Cargo.toml
crates/bevy_asset/src/: asset_server.rs  loader.rs
crates/bevy_asset/src/load_request/: platform_default.rs
crates/bevy_audio/: Cargo.toml
crates/bevy_audio/src/: audio_output.rs
crates/bevy_input/src/: lib.rs  touch.rs
crates/bevy_pbr/src/render_graph/forward_pipeline/: mod.rs
crates/bevy_render/: Cargo.toml
crates/bevy_render/src/shader/: shader.rs
crates/bevy_sprite/src/render/: mod.rs
crates/bevy_text/: Cargo.toml
crates/bevy_text/src/: draw.rs  pipeline.rs
crates/bevy_ui/src/: entity.rs  focus.rs  lib.rs
crates/bevy_ui/src/render/: mod.rs
crates/bevy_ui/src/widget/: text.rs
crates/bevy_wgpu/src/: wgpu_type_converter.rs
crates/bevy_winit/src/: converters.rs  lib.rs
examples/2d/: contributors.rs
examples/game/: breakout.rs
examples/scene/: scene.rs
examples/ui/: button.rs  font_atlas_debug.rs  text.rs  ui.rs
