[package]
name = "bevy_render"
version = "0.2.1"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "Provides rendering functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.2.1" }
bevy_asset = { path = "../bevy_asset", version = "0.2.1" }
bevy_core = { path = "../bevy_core", version = "0.2.1" }
bevy_derive = { path = "../bevy_derive", version = "0.2.1" }
bevy_ecs = { path = "../bevy_ecs", version = "0.2.1" }
bevy_math = { path = "../bevy_math", version = "0.2.1" }
bevy_property = { path = "../bevy_property", version = "0.2.1" }
bevy_transform = { path = "../bevy_transform", version = "0.2.1" }
bevy_type_registry = { path = "../bevy_type_registry", version = "0.2.1" }
bevy_window = { path = "../bevy_window", version = "0.2.1" }
bevy_utils = { path = "../bevy_utils", version = "0.2.1" }

# rendering
spirv-reflect = "0.2.3"
image = { version = "0.23", default-features = false }

# misc
log = { version = "0.4", features = ["release_max_level_info"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
bitflags = "1.2.1"
smallvec = "1.4.2"
# TODO: replace once_cell with std equivalent if/when this lands: https://github.com/rust-lang/rfcs/pull/2788
once_cell = "1.4.1"
downcast-rs = "1.2.0"
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4.2"
hexasphere = "1.0.0"
parking_lot = "0.11.0"
# naga = { git = "https://github.com/Napokue/naga", rev = "582b6c2a552c77f4fca286fb273f6272b13b8050", features = ["glsl-in", "spv-out"] }

[target.'cfg(all(not(target_os = "ios"), not(target_os = "android")))'.dependencies]
bevy-glsl-to-spirv = { git = "https://github.com/PrototypeNM1/glsl-to-spirv.git", branch = "static_lib" }

[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
shaderc = { git = "https://github.com/creator-rs/shaderc-rs", rev = "26d069c37651dee99feeb21ecd98183b03f744da" }
# shaderc = { path = "../../../shaderc/shaderc-rs" }

[features]
png = ["image/png"]
hdr = ["image/hdr"]
